backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_with_total_emits_intro_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[38;5;8m┌[0m  → Processing items
[38;5;8m│[0m
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m78[0m[2m:[0m → Processing items
