backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_with_total_then_update_changes_total_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[34m●[0m  ℹ Dynamic
[38;5;8m│[0m  
[34m●[0m  ℹ Dynamic (1/100)
[38;5;8m│[0m  
[34m●[0m  ℹ Dynamic (50/200)
[38;5;8m│[0m  
[34m●[0m  ℹ Dynamic (51/200)
[38;5;8m│[0m
